@@ -3141,7 +3141,11 @@ glm->generate("option-list", generator, elements);</programlisting>
       elements</title>
 
     <section id="uixmllayoutlistnewitems">
-      <title><tag class='element'>append_items</tag></title>
+      <title><tag class='element'>append_items</tag>,
+	<tag class='element'>replace_all_items</tag>,
+	<tag class='element'>insert_items</tag>, and
+	<tag class='element'>replace_items</tag>
+      </title>
       <blockquote>
 	<informalexample>
 	  <programlisting><![CDATA[
@@ -3156,19 +3160,115 @@ glm->generate("option-list", generator, elements);</programlisting>
       </items>
     </append_items>
 
+    <replace_all_items>
+      <items>
+         <label>Option 1</label>
+         <label>Option 2</label>
+      </items>
+    </replace_all_items>
+
+    <insert_items>
+      <position>1</position>
+      <items>
+         <label>Option 2(a)</label>
+      </items>
+    </insert_items>
+
+    <replace_items>
+      <position>2</position>
+      <items>
+         <label>Option 2(b)</label>
+      </items>
+    </replace_items>
 <!-- ... -->
 
 </layout>]]></programlisting>
 	</informalexample>
       </blockquote>
       <para>
-	<tag class='element'>append_items</tag>
-	invokes the list layout manager's
-	<methodname>append_items</methodname>()
-	method to add new items to the list.
-	These methods have a
-	<tag class='element'>items</tag> element that contains
-	a &listitemparamvalueslist; that specifies the new list items.
+	<tag class='element'>append_items</tag>,
+	<tag class='element'>replace_all_items</tag>,
+	<tag class='element'>insert_items</tag>, and
+	<tag class='element'>replace_items</tag>
+	invoke the corresponding
+	<link linkend="list">list layout manager</link> methods that add
+	new items to the list.
+	The <tag class='element'>position</tag> value specifies the
+	insert or replacement position (for
+	<tag class='element'>insert_items</tag> and
+	<tag class='element'>replace_items</tag>).
+	The
+	<tag class='element'>items</tag> element contains the
+	&listitemparamvalueslist; which defines the new list items.
+      </para>
+    </section>
+
+    <section id="uixmllayoutlistremoveitems">
+      <title><tag class='element'>remove_item</tag> and
+	<tag class='element'>remove_items</tag>
+      </title>
+      <blockquote>
+	<informalexample>
+	  <programlisting><![CDATA[
+<layout type="list" id="option-list">
+
+<!-- ... -->
+
+    <remove_item>
+      <position>0</position>
+    </remove_item>
+
+    <remove_items>
+      <position>1</position>
+      <count>2</count>
+    </remove_items>
+
+<!-- ... -->
+
+</layout>]]></programlisting>
+	</informalexample>
+      </blockquote>
+      <para>
+	<tag class='element'>remove_item</tag> and
+	<tag class='element'>remove_items</tag>
+	invoke the corresponding
+	<link linkend="list">list layout manager</link>
+	methods that remove
+	items from an existing list.
+	The <tag class='element'>position</tag> value specifies the
+	position index of the element to remove; or the first element
+	to remove, with
+	<tag class='element'>remove_items</tag>, and a
+	<tag class='element'>count</tag> giving the number of elements to
+	remove.
+      </para>
+    </section>
+
+    <section id="uixmllayoutlistautoselect">
+      <title><tag class='element'>autoselect</tag></title>
+      <blockquote>
+	<informalexample>
+	  <programlisting><![CDATA[
+<layout type="list" id="option-list">
+
+<!-- ... -->
+
+    <autoselect>
+      <position>0</position>
+    </autoselect>
+
+<!-- ... -->
+
+</layout>]]></programlisting>
+	</informalexample>
+      </blockquote>
+      <para>
+	<tag class='element'>autoselect</tag>
+	invokes the
+	<link linkend="list">list layout manager</link>
+	<methodname>autoselect</methodname>()
+	method, with the value of the
+	<tag class='element'>position</tag> element giving its parameter.
       </para>
     </section>
   </section>
